<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:gravity="center">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Range:"
                android:id="@+id/weekly_range" android:textSize="20sp" android:gravity="center_horizontal"
                android:layout_weight="1" android:textIsSelectable="true"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/weekly_date"
                android:id="@+id/weekly_day_date" android:layout_gravity="center" android:textSize="15sp"
                android:layout_weight="1" android:gravity="center_horizontal"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:id="@+id/weekly_day_total" android:textSize="15sp"
                android:layout_weight="1.2" android:gravity="center_horizontal" android:layout_gravity="left"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView" android:layout_weight="1">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/column_weekly_day_date"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:padding="5dp" android:layout_gravity="center_horizontal">

            </LinearLayout>
            <LinearLayout
                    android:id="@+id/column_weekly_day_total"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:layout_weight="1.2" android:padding="5dp"
                    android:layout_gravity="left">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_time"
                android:id="@+id/weekly_total_time" android:layout_gravity="center" android:textSize="25sp"
                android:textIsSelectable="true"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/weekly_back" android:layout_weight="1" android:textSize="20sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_weight="1">
        </LinearLayout>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/weekly_next" android:layout_weight="1" android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>